Set theme jekyll-theme-minimal

--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
 theme: jekyll-theme-minimal
-logo: http://file.dharmatype.com/site/dharma-type/dharmatype.png
+logo: /documentation/img/dharmatype.png
