--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,2 +1,5 @@
+title: Dharma Type
+description: Bebas Neue Font Repository
 logo: /assets/img/logo.png
+show_downloads: true
 theme: jekyll-theme-minimal
