--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-title: Dharma Type
+title: Bebas Neue by Dharma Type
 description: Bebas Neue Font Repository
 logo: /assets/img/logo.png
 show_downloads: true
