--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
-title: Bebas Neue by Dharma Type
-description: Bebas Neue Font Repository
+title: Bebas Neue
+description: Bebas Neue by Dharma Type
 logo: /assets/img/logo.png
 show_downloads: true
 theme: jekyll-theme-minimal
