--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
-title: Bebas Neue
-description: Bebas Neue by Dharma Type
+title: Dharma Type
+description: 
 logo: /assets/img/logo.png
 show_downloads: true
 theme: jekyll-theme-minimal
