--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 title: Dharma Type
-description: 
+description: Bebas Neue font by Dharma Type
 logo: /assets/img/logo.png
 show_downloads: true
 theme: jekyll-theme-minimal
